# setup.cfg
[metadata]
name = django-pit-survey
version = 0.0.5
description = Django app with web forms to assist with the collection of data for Point-in-Time (PIT) counts for the Annual Homeless Assessment Report (AHAR) sent to the U.S. Congress.
long_description = file:README.rst
url = https://github.com/Kopetzki/PIT_APP
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.8
packages=find:
setup_requires =
    setuptools >= 46.4.0
install_requires =
    Django>=3.0
    psycopg2>=2.8
    django-crispy-forms>=1.9
    django-plotly-dash>=1.3
    channels-redis>=2.4

[options.entry_points]
console_scripts =
    pit_init = pitapp.init:main
    pit_run = pitapp.run:main
